--- a/Aplikacja/app/src/main/res/values/strings.xml
+++ b/Aplikacja/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Hive</string>
+    <string name="channel_name">Hive</string>
+    <string name="channel_description">Hive</string>
 
 </resources>
